# stochman

./: .coveragerc  .gitignore  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  requirements_tests.txt  setup.cfg  setup.py
.github/workflows/: coverage.yml  flake8.yml  isort.yml  main.yml  sphinx.yml  tests.yml
docs/: environment.yml  make.bat
docs/source/: conf.py  index.rst  nnj.rst
examples/: computing_geodesics.ipynb  local_pca_mnist.py  non_gaussian_decoder.py  registering_a_new_distribution.py
examples/black_box_random_geometries/toy_example/: non_gaussian_decoder.py
examples/black_box_random_geometries/von_mises_fisher_example/: .gitignore  data_utils.py  main.py  train.py  vae_motion.py  vae_w_regularized_uncertainty.py  vmf.py
examples/black_box_random_geometries/von_mises_fisher_example/models/: vmf_motion.pt
examples/examples_laplace/: ae_models.py  data.py  laplace_ae_mnist.py  laplace_vae_mnist.py  laplace_vae_univariate.py  trainer_ae.py  trainer_e2e.py  trainer_lae.py  trainer_mcdrop_ae.py  trainer_vae.py  utils.py  vae_models.py  vae_normal.py  vae_normal_example.py
stochman/: __init__.py  curves.py  discretized_manifold.py  geodesic.py  manifold.py  nnj.py  utils.py
stochman/utilities/: __init__.py  distance.py  sampling.py
tests/: __init__.py  test_curves.py  test_nnj.py
