[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.autopep8]
max_line_length = 110
ignore = ["W504", "W504", "E402", "E731", "C40", "E741", "F40", "F841"]

[tool.black]
# https://github.com/psf/black
line-length = 110
target-version = ["py38"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist|docs)"

[tool.isort]
profile = "black"
line_length = 110
force_sort_within_sections = "False"
order_by_type = "False"