[metadata]
description-file = README.md

[flake8]
# TODO: this should be 88 or 100 according PEP8
max-line-length = 110
exclude = .tox,*.egg,build,temp,docs,setup.py
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
ignore = E731,W504,F401,F841,E722,W503

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html